Added preview of image if image, and updated decision button placement.

--- a/app/assets/stylesheets/resources/approvals.css.scss
+++ b/app/assets/stylesheets/resources/approvals.css.scss
@@ -47,3 +47,8 @@ form#new_comment { border: 1px solid #ddd; padding: 20px; border-radius: 4px;
     .btn { margin-right: 5px; }
   }
 }
+
+img#thumb {
+  max-width: 300px;
+  max-height: 300px;
+}
