Fix for decision modal @approval not present.

--- a/app/views/proposals/show.html.slim
+++ b/app/views/proposals/show.html.slim
@@ -47,9 +47,10 @@
               .email = de
 
 
-  .modal.fade#approvals-modal data-remote=decide_proposal_approval_path(@proposal, @approval) tabindex="-1" role="dialog" aria-labelledby="decide" aria-hidden="true"
-    .modal-dialog
-      .modal-content
+  - if @approval.present?
+    .modal.fade#approvals-modal data-remote=decide_proposal_approval_path(@proposal, @approval) tabindex="-1" role="dialog" aria-labelledby="decide" aria-hidden="true"
+      .modal-dialog
+        .modal-content
   = form_for [@proposal, Comment.new] do |f|
     h4 Give Feedback
     .form-group
